--- a/css/main.css
+++ b/css/main.css
@@ -2077,7 +2077,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff8671;
+  background: #ff3d22;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -3428,5 +3428,20 @@ a:hover {
   text-align: center;
 }
 .posts-expand .post-title {
+  text-align: center;
+}
+div.post-block.tag .collection-title h2 {
+  border-width: 1px;
+  border-style: solid;
+  border-color: #3f3f3f;
+  border-radius: 20px;
+  font-size: 26px;
+  background-color: #b4e8fa;
+  padding: 2px 15px;
+  letter-spacing: 1.5px;
+  box-sizing: border-box;
+  color: #3f3f3f;
+  display: inline-block;
+  margin: 10px 0% 10px;
   text-align: center;
 }
