--- a/css/main.css
+++ b/css/main.css
@@ -2077,7 +2077,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #9ef599;
+  background: #ffff9f;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -3182,6 +3182,12 @@ ul.breadcrumb li+li:last-child {
   .post-body {
     text-align: justify;
   }
+}
+body {
+  background: url("https://source.unsplash.com/random/1600x900");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: 50% 50%;
 }
 .site-meta {
   height: 200px;
