--- a/css/main.css
+++ b/css/main.css
@@ -2077,7 +2077,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff8ae5;
+  background: #ff03aa;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -3200,6 +3200,7 @@ body {
   padding: 25px;
   -webkit-box-shadow: 0 0 10px #fff;
   -moz-box-shadow: 0 0 10px #fff;
+  background: #fff;
 }
 .footer {
   font-size: 15px;
