--- a/css/main.css
+++ b/css/main.css
@@ -2077,7 +2077,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #33b0ff;
+  background: #ffff14;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -3183,12 +3183,6 @@ ul.breadcrumb li+li:last-child {
     text-align: justify;
   }
 }
-body {
-  background: url("/images/background.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: 50% 50%;
-}
 .site-meta {
   height: 200px;
   background-image: url("/images/header.jpg");
@@ -3198,8 +3192,8 @@ body {
   margin-top: 0px;
   margin-bottom: 60px;
   padding: 25px;
-  -webkit-box-shadow: 0 0 10px #fff;
-  -moz-box-shadow: 0 0 10px #fff;
+  -webkit-box-shadow: 0 0 10px rgba(202,203,203,0.5);
+  -moz-box-shadow: 0 0 10px rgba(202,203,203,0.5);
 }
 .footer {
   font-size: 15px;
