--- a/css/main.css
+++ b/css/main.css
@@ -2077,7 +2077,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #2aff13;
+  background: #c64909;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -3454,7 +3454,7 @@ div.post-block.tag .collection-title h2 {
 }
 .weixin-box {
   position: absolute;
-  bottom: 60px;
+  bottom: 100px;
   left: 10px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.35);
