--- a/css/main.css
+++ b/css/main.css
@@ -2077,7 +2077,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ff1aff;
+  background: #37ff73;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -3194,15 +3194,6 @@ ul.breadcrumb li+li:last-child {
   padding: 25px;
   -webkit-box-shadow: 0 0 10px rgba(202,203,203,0.5);
   -moz-box-shadow: 0 0 10px rgba(202,203,203,0.5);
-}
-.footer {
-  font-size: 15px;
-  background: #fff;
-}
-@media (max-width: 767px) {
-  .footer {
-    font-size: 12px;
-  }
 }
 .post-toc .nav .nav-child {
   display: block;
