--- a/css/main.css
+++ b/css/main.css
@@ -2077,7 +2077,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #82da1d;
+  background: #2dffd9;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -3427,6 +3427,15 @@ a:hover {
 }
 .posts-expand .post-title {
   text-align: center;
+}
+.footer {
+  font-size: 13px;
+  background: #fff;
+}
+@media (max-width: 767px) {
+  .footer {
+    font-size: 12px;
+  }
 }
 div.post-block.tag .collection-title h2 {
   border-width: 1px;
