--- a/css/main.css
+++ b/css/main.css
@@ -2077,7 +2077,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #2dffd9;
+  background: #c25814;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -3429,13 +3429,22 @@ a:hover {
   text-align: center;
 }
 .footer {
-  font-size: 13px;
-  background: #fff;
+  color: #222;
+  height: 80px;
+  margin: auto;
+  text-align: right;
+  width: 100%;
 }
-@media (max-width: 767px) {
-  .footer {
-    font-size: 12px;
-  }
+.footer-inner img {
+  display: inline;
+  margin: 0px;
+  max-width: 50px;
+  height: auto;
+}
+.footer-inner {
+  font-family: "Linux Biolinum", 'Noto Serif SC', sans-serif;
+  text-align: center;
+  font-size: 13px;
 }
 div.post-block.tag .collection-title h2 {
   border-width: 1px;
