--- a/css/main.css
+++ b/css/main.css
@@ -2077,7 +2077,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #f6ff1c;
+  background: #472822;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -3194,6 +3194,9 @@ ul.breadcrumb li+li:last-child {
   padding: 25px;
   -webkit-box-shadow: 0 0 10px rgba(202,203,203,0.5);
   -moz-box-shadow: 0 0 10px rgba(202,203,203,0.5);
+}
+img.img-topic {
+  width: 100%;
 }
 .post-toc .nav .nav-child {
   display: block;
