--- a/css/main.css
+++ b/css/main.css
@@ -2077,7 +2077,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ffb5ff;
+  background: #ff7045;
 }
 .links-of-blogroll {
   font-size: 13px;
