--- a/css/main.css
+++ b/css/main.css
@@ -2077,7 +2077,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #6c3252;
+  background: #409961;
 }
 .links-of-blogroll {
   font-size: 13px;
